text2sql/cfg/parser/text2sqlParser.py
# Generated from text2sql/cfg/parser/text2sql.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class text2sqlParser ( Parser ):

    grammarFileName = "text2sql.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'kwetsbaarheid'", "'kwetsbaarheden'", 
                     "'maximale'", "'maximaal'", "'max'", "'minimale'", 
                     "'minimaal'", "'min'", "'gemiddeld'", "'gemiddelde'", 
                     "'cve'", "'cve's'", "'cves'", "'CVE'", "'CVE's'", "'CVEs'", 
                     "'title'", "'titel'", "'confidence'", "'zekerheid'", 
                     "'ernst'", "'severity'", "'cvss'", "'cvss-score'", 
                     "'cvss score'", "'CVSS'", "'CVSS-score'", "'CVSS score'", 
                     "'epss'", "'epss-score'", "'epss score'", "'EPSS'", 
                     "'EPSS-score'", "'EPSS score'", "'leeftijd'", "'age'", 
                     "'cwe'", "'cwe's'", "'cwes'", "'CWE'", "'CWE's'", "'CWEs'", 
                     "'kev'", "'cisa-kev'", "'cisa kev'", "'CISA KEV'", 
                     "'KEV'", "'CISA-KEV'", "'groter'", "'hoger'", "'ouder'", 
                     "'meer'", "'dan'", "'kleiner'", "'lager'", "'jonger'", 
                     "'minder'", "'gelijk'", "'bevat'", "'heeft'", "'grootste'", 
                     "'hoogste'", "'aflopend'", "'descending'", "'oudste'", 
                     "'kleinste'", "'laagste'", "'oplopend'", "'ascending'", 
                     "'jongste'", "'nieuwste'", "'true'", "'waar'", "'bestaat'", 
                     "'false'", "'onwaar'", "'niet bestaat'", "'informational'", 
                     "'low'", "'medium'", "'high'", "'critical'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "INT", "FLOAT", 
                      "STRING", "WS" ]

    RULE_prog = 0
    RULE_table = 1
    RULE_columnList = 2
    RULE_vulnerability = 3
    RULE_aggregator = 4
    RULE_max = 5
    RULE_min = 6
    RULE_avg = 7
    RULE_column = 8
    RULE_cve = 9
    RULE_title = 10
    RULE_confidence = 11
    RULE_severity = 12
    RULE_cvss = 13
    RULE_epss = 14
    RULE_age = 15
    RULE_cwe = 16
    RULE_kev = 17
    RULE_comparison = 18
    RULE_number_comparison = 19
    RULE_bool_comparison = 20
    RULE_text_comparison = 21
    RULE_numeric_column = 22
    RULE_operator = 23
    RULE_gt = 24
    RULE_lt = 25
    RULE_eq = 26
    RULE_like = 27
    RULE_ordering = 28
    RULE_order = 29
    RULE_desc = 30
    RULE_asc = 31
    RULE_value = 32
    RULE_bool = 33
    RULE_true = 34
    RULE_false = 35
    RULE_severity_scale = 36

    ruleNames =  [ "prog", "table", "columnList", "vulnerability", "aggregator", 
                   "max", "min", "avg", "column", "cve", "title", "confidence", 
                   "severity", "cvss", "epss", "age", "cwe", "kev", "comparison", 
                   "number_comparison", "bool_comparison", "text_comparison", 
                   "numeric_column", "operator", "gt", "lt", "eq", "like", 
                   "ordering", "order", "desc", "asc", "value", "bool", 
                   "true", "false", "severity_scale" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    T__70=71
    T__71=72
    T__72=73
    T__73=74
    T__74=75
    T__75=76
    T__76=77
    T__77=78
    T__78=79
    T__79=80
    T__80=81
    T__81=82
    INT=83
    FLOAT=84
    STRING=85
    WS=86

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def table(self):
            return self.getTypedRuleContext(text2sqlParser.TableContext,0)


        def columnList(self):
            return self.getTypedRuleContext(text2sqlParser.ColumnListContext,0)


        def comparison(self):
            return self.getTypedRuleContext(text2sqlParser.ComparisonContext,0)


        def aggregator(self):
            return self.getTypedRuleContext(text2sqlParser.AggregatorContext,0)


        def column(self):
            return self.getTypedRuleContext(text2sqlParser.ColumnContext,0)


        def ordering(self):
            return self.getTypedRuleContext(text2sqlParser.OrderingContext,0)


        def INT(self):
            return self.getToken(text2sqlParser.INT, 0)

        def getRuleIndex(self):
            return text2sqlParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = text2sqlParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.state = 102
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 82
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1, 2]:
                    self.state = 74
                    self.table()
                    self.state = 76
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                    if la_ == 1:
                        self.state = 75
                        self.columnList()


                    pass
                elif token in [11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48]:
                    self.state = 78
                    self.columnList()
                    self.state = 80
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==1 or _la==2:
                        self.state = 79
                        self.table()


                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 562949953419264) != 0) or _la==83 or _la==84:
                    self.state = 84
                    self.comparison()


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 87
                self.aggregator()
                self.state = 88
                self.column()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==83:
                    self.state = 90
                    self.match(text2sqlParser.INT)


                self.state = 93
                self.table()
                self.state = 94
                self.ordering()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==83:
                    self.state = 96
                    self.match(text2sqlParser.INT)


                self.state = 99
                self.ordering()
                self.state = 100
                self.table()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vulnerability(self):
            return self.getTypedRuleContext(text2sqlParser.VulnerabilityContext,0)


        def getRuleIndex(self):
            return text2sqlParser.RULE_table

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTable" ):
                listener.enterTable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTable" ):
                listener.exitTable(self)




    def table(self):

        localctx = text2sqlParser.TableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_table)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.vulnerability()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColumnListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def column(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(text2sqlParser.ColumnContext)
            else:
                return self.getTypedRuleContext(text2sqlParser.ColumnContext,i)


        def getRuleIndex(self):
            return text2sqlParser.RULE_columnList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumnList" ):
                listener.enterColumnList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumnList" ):
                listener.exitColumnList(self)




    def columnList(self):

        localctx = text2sqlParser.ColumnListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_columnList)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.column()
            self.state = 110
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 107
                    self.column() 
                self.state = 112
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VulnerabilityContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return text2sqlParser.RULE_vulnerability

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVulnerability" ):
                listener.enterVulnerability(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVulnerability" ):
                listener.exitVulnerability(self)




    def vulnerability(self):

        localctx = text2sqlParser.VulnerabilityContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vulnerability)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            _la = self._input.LA(1)
            if not(_la==1 or _la==2):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AggregatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def max_(self):
            return self.getTypedRuleContext(text2sqlParser.MaxContext,0)


        def min_(self):
            return self.getTypedRuleContext(text2sqlParser.MinContext,0)


        def avg(self):
            return self.getTypedRuleContext(text2sqlParser.AvgContext,0)


        def getRuleIndex(self):
            return text2sqlParser.RULE_aggregator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAggregator" ):
                listener.enterAggregator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAggregator" ):
                listener.exitAggregator(self)




    def aggregator(self):

        localctx = text2sqlParser.AggregatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_aggregator)
        try:
            self.state = 118
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 4, 5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.max_()
                pass
            elif token in [6, 7, 8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self.min_()
                pass
            elif token in [9, 10]:
                self.enterOuterAlt(localctx, 3)
                self.state = 117
                self.avg()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MaxContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return text2sqlParser.RULE_max

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMax" ):
                listener.enterMax(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMax" ):
                listener.exitMax(self)




    def max_(self):

        localctx = text2sqlParser.MaxContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_max)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 56) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MinContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return text2sqlParser.RULE_min

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMin" ):
                listener.enterMin(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMin" ):
                listener.exitMin(self)




    def min_(self):

        localctx = text2sqlParser.MinContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_min)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 448) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AvgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return text2sqlParser.RULE_avg

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAvg" ):
                listener.enterAvg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAvg" ):
                listener.exitAvg(self)




    def avg(self):

        localctx = text2sqlParser.AvgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_avg)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            _la = self._input.LA(1)
            if not(_la==9 or _la==10):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColumnContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cve(self):
            return self.getTypedRuleContext(text2sqlParser.CveContext,0)


        def title(self):
            return self.getTypedRuleContext(text2sqlParser.TitleContext,0)


        def confidence(self):
            return self.getTypedRuleContext(text2sqlParser.ConfidenceContext,0)


        def severity(self):
            return self.getTypedRuleContext(text2sqlParser.SeverityContext,0)


        def cvss(self):
            return self.getTypedRuleContext(text2sqlParser.CvssContext,0)


        def epss(self):
            return self.getTypedRuleContext(text2sqlParser.EpssContext,0)


        def age(self):
            return self.getTypedRuleContext(text2sqlParser.AgeContext,0)


        def kev(self):
            return self.getTypedRuleContext(text2sqlParser.KevContext,0)


        def cwe(self):
            return self.getTypedRuleContext(text2sqlParser.CweContext,0)


        def getRuleIndex(self):
            return text2sqlParser.RULE_column

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumn" ):
                listener.enterColumn(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumn" ):
                listener.exitColumn(self)




    def column(self):

        localctx = text2sqlParser.ColumnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_column)
        try:
            self.state = 135
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11, 12, 13, 14, 15, 16]:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.cve()
                pass
            elif token in [17, 18]:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.title()
                pass
            elif token in [19, 20]:
                self.enterOuterAlt(localctx, 3)
                self.state = 128
                self.confidence()
                pass
            elif token in [21, 22]:
                self.enterOuterAlt(localctx, 4)
                self.state = 129
                self.severity()
                pass
            elif token in [23, 24, 25, 26, 27, 28]:
                self.enterOuterAlt(localctx, 5)
                self.state = 130
                self.cvss()
                pass
            elif token in [29, 30, 31, 32, 33, 34]:
                self.enterOuterAlt(localctx, 6)
                self.state = 131
                self.epss()
                pass
            elif token in [35, 36]:
                self.enterOuterAlt(localctx, 7)
                self.state = 132
                self.age()
                pass
            elif token in [43, 44, 45, 46, 47, 48]:
                self.enterOuterAlt(localctx, 8)
                self.state = 133
                self.kev()
                pass
            elif token in [37, 38, 39, 40, 41, 42]:
                self.enterOuterAlt(localctx, 9)
                self.state = 134
                self.cwe()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return text2sqlParser.RULE_cve

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCve" ):
                listener.enterCve(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCve" ):
                listener.exitCve(self)




    def cve(self):

        localctx = text2sqlParser.CveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_cve)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 129024) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TitleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return text2sqlParser.RULE_title

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTitle" ):
                listener.enterTitle(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTitle" ):
                listener.exitTitle(self)




    def title(self):

        localctx = text2sqlParser.TitleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_title)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            _la = self._input.LA(1)
            if not(_la==17 or _la==18):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConfidenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return text2sqlParser.RULE_confidence

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConfidence" ):
                listener.enterConfidence(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConfidence" ):
                listener.exitConfidence(self)




    def confidence(self):

        localctx = text2sqlParser.ConfidenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_confidence)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            _la = self._input.LA(1)
            if not(_la==19 or _la==20):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SeverityContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return text2sqlParser.RULE_severity

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSeverity" ):
                listener.enterSeverity(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSeverity" ):
                listener.exitSeverity(self)




    def severity(self):

        localctx = text2sqlParser.SeverityContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_severity)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            _la = self._input.LA(1)
            if not(_la==21 or _la==22):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CvssContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return text2sqlParser.RULE_cvss

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCvss" ):
                listener.enterCvss(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCvss" ):
                listener.exitCvss(self)




    def cvss(self):

        localctx = text2sqlParser.CvssContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_cvss)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 528482304) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EpssContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return text2sqlParser.RULE_epss

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEpss" ):
                listener.enterEpss(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEpss" ):
                listener.exitEpss(self)




    def epss(self):

        localctx = text2sqlParser.EpssContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_epss)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 33822867456) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AgeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return text2sqlParser.RULE_age

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAge" ):
                listener.enterAge(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAge" ):
                listener.exitAge(self)




    def age(self):

        localctx = text2sqlParser.AgeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_age)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            _la = self._input.LA(1)
            if not(_la==35 or _la==36):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CweContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return text2sqlParser.RULE_cwe

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCwe" ):
                listener.enterCwe(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCwe" ):
                listener.exitCwe(self)




    def cwe(self):
